--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ kramdown:
 
 
 # Disqus settings
-#disqus_username: lockiee
+disqus_username: lockie
 
 # Duoshuo settings
 # duoshuo_username: lockiee
